[package]
name = "codingfetch"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
tabled = { version = "0.13.0", features = ["macros","color"] }
regex = "1.9.1"
confy = "0.5.1"
serde = { version = "1.0.182", features = ["derive"] }
